syntax = "proto3";

option csharp_namespace = "LetsTalk.Server.FileStorageService.Protos";

package file_upload;

service FileUploadGrpcService {
	rpc UploadAsync (FileUploadRequest) returns (FileUploadResponse);
}

message FileUploadRequest {
	enum ImageType {
		unknown = 0;
		avatar = 1;
		message = 2;  
	}
	bytes content = 1;
	ImageType image_type = 2;
}

message FileUploadResponse {
	int64 file_id = 1;
}